2011-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/yarp_with_ros.dox: first pass at documenting use of 
	YARP with ROS.

	* src/libYARP_OS/src/Companion.cpp: support "yarp detect --ros"
	to run yarp on a ros name server.  Experimental.

	* src/libYARP_OS/src/Network.cpp et al: activate multiple name
	server support.

	* src/libYARP_OS/src/Port.cpp: support local allocation of 
	socket port numbers, for use with name servers that don't
	allocate them.

	* src/libYARP_OS/src/MultiNameSpace.cpp et al: apply patch
	supporting multiple namespaces.  Not yet activated.

	* conf/YarpSystemCheck.cmake: add tests for constructing NetInt64
	and NetFloat32 types.

	* conf/YarpVersion.cmake: bump version number to 2.3.6

2011-07-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/rpc_ports.dox: fix documentation to show rpc client
	instead of duplicating rpc server [thanks Ugo Pattacini]

2011-07-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* COPYING: clarify years of participation of member
	organizations of "RobotCub Consortium" [thanks Lorenzo Natale]
	[thanks Lorenzo DeMichieli]

2011-07-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* COPYING: clarify meaning of "RobotCub Consortium" for
	copyright purposes [thanks Giorgio Metta]

2011-07-02  Ugo Pattacini  <ugo.pattacini@iit.it>

        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
        new methods get3DPoint() and get3DPointOnPlane() added to
        facilitate 2d-3d mapping.

2011-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/BottleTest.cpp: test "null bottle"
	copying, and modify existing tests for new expected behavior

	* src/libYARP_OS/include/yarp/os/Bottle.cpp: copy "null bottles"
	without fuss, to meet user expectations [thanks Gianluca Massera]

	* conf/template/YARPConfig.cmake.in: remove auto-linking 
	option, which was there to ease a transition to more
	normal behavior of FIND_PACKAGE(YARP) last year.
